--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <div class="logo">
             <img src="dev.jpg" alt="">
         </div>
-
+        <div class="darkmode">
+            <i class="fa-solid fa-sun change-theme" id="theme-button"></i>
+        </div>
 
         <button class="nav-toggle" aria-label="toogle naviagation ">
             <span class="hamburger"></span>
@@ -85,6 +87,12 @@
 
         </div><!--/services-->
         <a href="#work" class="btn">My work</a>
+        <div class="btn-con">
+            <a href="#" class="main-btn">
+                <span class="btn-text">Download CV</span>
+                <span class="btn-icon"><i class="fa-solid fa-download"></i></span>
+            </a>
+        </div>
     </section>
 
     <!--About me -->
