added word document and fixed the download

--- a/index.html
+++ b/index.html
@@ -87,12 +87,7 @@
 
         </div><!--/services-->
         <a href="#work" class="btn">My work</a>
-        <div class="btn-con">
-            <a href="#" class="main-btn">
-                <span class="btn-text">Download CV</span>
-                <span class="btn-icon"><i class="fa-solid fa-download"></i></span>
-            </a>
-        </div>
+        
     </section>
 
     <!--About me -->
@@ -111,7 +106,14 @@
              .</p>
     </div>
     <img src="plane2.jpg" alt="Picture of me " class="about-me__img">
+    <div class="btn-con">
+        <a href="resume.docx" class="main-btn">
+            <span class="btn-text">Download CV</span>
+            <span class="btn-icon"><i class="fa-solid fa-download"></i></span>
+        </a>
+    </div>
     </section>
+ 
 
     <!-- My work -->
 
