Add dark mode to the profile class

--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -20,7 +20,9 @@
         <div class="logo">
             <img src="dev.jpg" alt="">
         </div>
-
+        <div class="darkmode">
+            <i class="fa-solid fa-sun change-theme" id="theme-button"></i>
+        </div>
 
         <button class="nav-toggle" aria-label="toogle naviagation ">
             <span class="hamburger"></span>
