--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 
 </head>
 <body>
+    <div class="hide" id="cookiePopup">
+        <p>
+            Our Website uses cookies to provides your browsing experience and
+            relevant information. Before continuing to use our website, you agree &
+            accept of our <a href="#">Cookie Policy & Privacy.</a>
+        </p>
+        <button id="acceptCookie">Accept</button>
+
+    </div>
     <header>
         <div class="logo">
             <img src="dev.jpg" alt="">
