--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <div class="portfolio">
             <!-- portfolio item 01-->
-            <a href="/profolio-website/portfolio-item.html" class="portfolio__item">
+            <a href="/portfolio-item.html" class="portfolio__item">
                 <img src="plane2.jpg" alt="" class="portfolio__img">
             </a>
              <!-- portfolio item 02-->
