change front size and add text

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
             </div><!--/service-->
 
             <div class="service">
-                <h3>E-commerce</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <h3>Performance and Optimization</h3>
+                <p>Working on enhancing code efficiency and performance to ensure smooth operation of applications. Implementing simple caching strategies to improve response times and reduce server load.</p>
             </div><!--/service-->
 
             <div class="service">
-                <h3>WordPress</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <h3>Collaboration and Learning</h3>
+                <p>  I actively engage in discussions, share insights, and integrate feedback to enhance our collective knowledge. Tools like Git, JIRA, Slack, and GitHub facilitate smooth collaboration, while pair programming and code reviews ensure high-quality outcomes.  Diagnosing and fixing bugs, and learning from hands-on experience to improve problem-solving skills .</p>
             </div><!--/service-->
         </div><!--/services-->
         <a href="#work" class="btn">My Work</a>
