--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -12,7 +12,7 @@
     <!---font-->
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans
     +Pro:300,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/Projects.css">
 
 </head>
 <body>
@@ -45,24 +45,42 @@
         The title <strong> of my project</strong>
 
     </h1>
-    <p class="section__subtitle section__subtitle--intro">A short title</p>
-    <img src="test2.jpg" alt="A picture of me" class="intro__img">
+    <p class="section__subtitle section__subtitle--intro">Spotify activity App</p>
+    <a href="https://testspotify-af120bb16cf3.herokuapp.com/"><img src="logo.svg"A picture of me" class="intro__img"></a>
 </section>
 
 <div class="portfolio-item-individual">
-<p> Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin 
-literature from 45 BC, making it over 2000 years old. Richard McClintock,
- a Latin professor at Hampden-Sydney College in Virginia, looked up one of</p>
-<img src="test.jpg" alt="">
-<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected
-     humouror randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to
-      be sure there isn't anything embarrassing hidden in the middle of text
-     .</p>
+<p> The spotify activity app is a Flask application designed to integrate with the Spotify API. It handles user authentication, 
+    allowing users to log in using their Spotify credentials to access personalized music statistics and playlists. 
+    This module demonstrates proficiency in OAuth 2.0 integration, secure handling of environment variables, and session management 
+    within a web application context.</p>
+<P>App Link</P>
 
-<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected
-    humouror randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to
-     be sure there isn't anything embarrassing hidden in the middle of text</p>
+<p><a href="https://testspotify-af120bb16cf3.herokuapp.com/">Spotify Activity</a></p>
+<p><a href="https://github.com/fumnanya12/Playlist.git">Source code </a></p>
 
+
+<img src="welcomespotify.png" alt="">
+<p>The primary goal of this project is to analyze the user's listening patterns and create 
+    personalized playlists based on their listening activity. 
+    The project is still in the early stages of development and will be updated periodically as new features are added. Currently, 
+    the app is capable of fetching and displaying the user's recently played tracks.
+    </p>
+
+<p>Key Features:</p>
+<ul>
+    <li>OAuth 2.0 Authentication: Implements OAuth 2.0 protocol to authenticate users securely with Spotify, enabling access to user-specific data like recently played tracks, playlists, and music preferences.</li>
+    <li>Recently Played Tracks: The app records and displays a list of tracks the user has recently listened to on Spotify, allowing for later access and analysis..</li>
+    <li>Profile Viewing: Users can view their Spotify profile details including their playlists directly within the app.</li>
+    <li>Interactive UI: Includes dynamic content updates, loaders, and responsive design elements for a smooth user interaction experience..</li>
+</ul>
+<p>Technologies Used :</p>
+<ul>
+    <li>Flask: A lightweight WSGI web application framework in Python, used for handling web requests and serving responses</li>
+    <li>Requests Library: Utilized for making HTTP requests to Spotify's API endpoints, handling OAuth-related redirects and data retrieval.</li>
+    <li>Profile Viewing: Users can view their Spotify profile details including their playlists directly within the app.</li>
+    <li>Python-dotenv: Manages environment variables through .env files, facilitating the secure configuration of application credentials.</li>
+</ul>
 </div>
    
     <!--Footer-->
@@ -71,27 +89,22 @@ literature from 45 BC, making it over 2000 years old. Richard McClintock,
         <a href="mailto:fumnanya.obi@gmail.com" class="footer-link">fumnanya.obi@gmail.com</a>
     <ul class="social-list">
          <li class="social-list__item"> 
-            <a class=" social-list__link" href=""><i class="fa-brands fa-google"></i></a>
+            <a class=" social-list__link" href="mailto:fumnanya.obi@gmail.com"><i class="fa-brands fa-google"></i></a>
         </li>
 
-         <li class="social-list__item">
-             <a class=" social-list__link" href="">
-                <i class="fa-brands fa-youtube"></i>
-             </a>
-            </li>
+         
          <li class="social-list__item">
             <a class=" social-list__link" href="https://www.instagram.com/fumnanya_obi/">
                 <i class="fa-brands fa-instagram"></i>
             </a>
         </li>
          <li class="social-list__item"> 
-            <a class=" social-list__link" href="www.linkedin.com/in/fumnanya-obi-7758441a9
-            ">
+            <a class=" social-list__link" href="www.linkedin.com/in/fumnanya-obi-7758441a9">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
         </li>
          <li class="social-list__item">
-             <a class=" social-list__link" href=""> 
+             <a class=" social-list__link" href="https://github.com/fumnanya12"> 
                 <i class="fa-brands fa-github"></i>
             </a>
             </li>
