--- a/index.html
+++ b/index.html
@@ -50,12 +50,20 @@
         <h2 class="section__title section__title--about">Who I Am</h2>
         <p class="section__subtitle section__subtitle--about">Dev based in Winnipeg</p>
         <div class="about-me__body">
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text.</p>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend.</p>
+            <p>Hello! I’m a recent Computer Science graduate from the University of Manitoba, and I specialize in software engineering. With a passion for building scalable and efficient software solutions, I am eager to apply my academic knowledge in a real-world setting, especially in areas that challenge the status quo of technology and innovation</p>
+            <p>My journey into computer science began out of curiosity about creating software solutions that can ease everyday life, leading me to pursue a degree where I could not only learn about software development but also about systems analysis, user experience, and data management. Throughout my academic career, I worked personal projects that allowed me to refine my skills in coding, debugging, and collaborative problem-solving</p>
+            <p><strong>Skills and Expertise</strong></p>
+            <p>As a budding software engineer, I have cultivated a robust set of technical skills including: </p>
+            <ul>
+                <li>Programming Languages: Proficient in Python, Java. I also have experience with HTML, CSS, and JavaScript for web development</li>
+                <li>Frameworks and Tools: Experienced with Flask for backend development, React for frontend projects, and familiar with Docker for containerization</li>
+                <li>Version Control: Adept in using Git for version control to manage and track changes in software projects, ensuring efficient team collaboration and project continuity.</li>
+                <li>Problem-Solving: Strong analytical skills with the ability to troubleshoot and solve complex problems, which was honed through rigorous coursework and hands-on projects at university.</li>
+            </ul>
         </div>
-        <img src="plane2.jpg" alt="Picture of me" class="about-me__img">
+        <img src="programmer-4523101_1280.jpg" alt="Picture of me" class="about-me__img">
         <div class="btn-con">
-            <a href="resume.docx" class="main-btn">
+            <a href="resumeofficial.docx" class="main-btn">
                 <span class="btn-text">Download CV</span>
                 <span class="btn-icon"><i class="fa-solid fa-download"></i></span>
             </a>
@@ -68,8 +76,8 @@
         <h2 class="section__title section__title--services">What I Do</h2>
         <div class="services">
             <div class="service">
-                <h3>Development and Implementation</h3>
-                <p>Creating and maintaining RESTful APIs to facilitate communication between the frontend and backend. Assisting in designing and querying databases using SQL or NoSQL solutions like PostgreSQL, MySQL, or MongoDB.</p>
+                <h3>Professional Aspirations</h3>
+                <p>I aim to leverage my technical skills and fresh perspective to contribute to innovative projects within a forward-thinking company. I am particularly interested in creating and maintaining RESTful APIs to facilitate communication between the frontend and backend. Assisting in designing and querying databases using SQL or NoSQL solutions like PostgreSQL, MySQL, or MongoDB.</p>
             </div><!--/service-->
 
             <div class="service">
@@ -79,7 +87,7 @@
 
             <div class="service">
                 <h3>Collaboration and Learning</h3>
-                <p>  I actively engage in discussions, share insights, and integrate feedback to enhance our collective knowledge. Tools like Git, JIRA, Slack, and GitHub facilitate smooth collaboration, while pair programming and code reviews ensure high-quality outcomes.  Diagnosing and fixing bugs, and learning from hands-on experience to improve problem-solving skills .</p>
+                <p>  I actively engage in discussions, share insights, and integrate feedback to enhance our collective knowledge. Tools like Git, Slack, and GitHub facilitate smooth collaboration .</p>
             </div><!--/service-->
         </div><!--/services-->
         <a href="#work" class="btn">My Work</a>
@@ -92,45 +100,29 @@
         <div class="portfolio">
             <!-- Portfolio Item 01 -->
             <a href="/portfolio-item.html" class="portfolio__item">
-                <img src="plane2.jpg" alt="Portfolio Item 01" class="portfolio__img">
+                <img src="toptracks.png" alt="Portfolio Item 01" class="portfolio__img">
             </a>
-            <!-- Portfolio Item 02 -->
-            <a href="/profolio-website/portfolio-item.html" class="portfolio__item">
-                <img src="wallcolor.jpg" alt="Portfolio Item 02" class="portfolio__img">
-            </a>
-            <!-- Portfolio Item 03 -->
-            <a href="/profolio-website/portfolio-item.html" class="portfolio__item">
-                <img src="plane3.jpg" alt="Portfolio Item 03" class="portfolio__img">
-            </a>
-            <!-- Portfolio Item 04 -->
-            <a href="/profolio-website/portfolio-item.html" class="portfolio__item">
-                <img src="airport.jpg" alt="Portfolio Item 04" class="portfolio__img">
-            </a>
-            <!-- Portfolio Item 05 -->
-            <a href="/profolio-website/portfolio-item.html" class="portfolio__item">
-                <img src="airport1.jpg" alt="Portfolio Item 05" class="portfolio__img">
-            </a>
+          
         </div>
     </section>
 
     <!-- Footer -->
     <footer class="footer">
+        <p>I am currently seeking opportunities that will allow me to develop and hone my engineering skills . If you’re looking for someone who is passionate about technology and driven to learn, I would love to connect!</p>
         <a href="mailto:fumnanya.obi@gmail.com" class="footer-link">fumnanya.obi@gmail.com</a>
         <ul class="social-list">
             <li class="social-list__item"> 
-                <a class="social-list__link" href=""><i class="fa-brands fa-google"></i></a>
+                <a class="social-list__link" href="mailto:fumnanya.obi@gmail.com"><i class="fa-brands fa-google"></i></a>
             </li>
-            <li class="social-list__item">
-                <a class="social-list__link" href=""><i class="fa-brands fa-youtube"></i></a>
-            </li>
+        
             <li class="social-list__item">
                 <a class="social-list__link" href="https://www.instagram.com/fumnanya_obi/"><i class="fa-brands fa-instagram"></i></a>
             </li>
             <li class="social-list__item"> 
-                <a class="social-list__link" href="https://www.linkedin.com/public-profile/settings?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact-info%3BbVkjdvvgQ%2FmNIYCqpLj%2Fjw%3D%3D"><i class="fa-brands fa-linkedin"></i></a>
+                <a class="social-list__link" href="https://www.linkedin.com/in/fumnanya-obi"><i class="fa-brands fa-linkedin"></i></a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href=""><i class="fa-brands fa-github"></i></a>
+                <a class="social-list__link" href="https://github.com/fumnanya12"><i class="fa-brands fa-github"></i></a>
             </li>
         </ul>
     </footer>
