--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
             <a href="/portfolio-item.html" class="portfolio__item">
                 <img src="toptracks.png" alt="Portfolio Item 01" class="portfolio__img">
             </a>
+            <!-- Portfolio Item 01 -->
+            <a href="/portfolio-item.html" class="portfolio__item">
+                <img src="#" alt="Portfolio Item 01" class="portfolio__img">
+            </a>
           
         </div>
     </section>
