--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h1 class="section__title section__title--intro">
             Hi, I am <strong>Fumnanya Obi</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">Back-end Dev</p>
+        <p class="section__subtitle section__subtitle--intro">Software Engineer</p>
         <img src="frontpic.jpg" alt="A picture of me" class="intro__img">
     </section>
 
