--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -79,8 +79,11 @@
     <li>Flask: A lightweight WSGI web application framework in Python, used for handling web requests and serving responses</li>
     <li>Requests Library: Utilized for making HTTP requests to Spotify's API endpoints, handling OAuth-related redirects and data retrieval.</li>
     <li>Profile Viewing: Users can view their Spotify profile details including their playlists directly within the app.</li>
-    <li>Python-dotenv: Manages environment variables through .env files, facilitating the secure configuration of application credentials.</li>
+
 </ul>
+<p>Important information</p>
+<strong>The app is still in the development stage and will be updated periodically as new features are added.</strong>
+<p>For further information, please refer to the project's README file on GitHub.</p>
 </div>
    
     <!--Footer-->
