--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -81,10 +81,10 @@
     <li>Profile Viewing: Users can view their Spotify profile details including their playlists directly within the app.</li>
 
 </ul>
-<p>Important information</p>
-<strong>The app is still in the development stage and will be updated periodically as new features are added.</strong>
-<p>For further information, please refer to the project's README file on GitHub.</p>
 </div>
+<p style="color:Tomato;">Important information</p>
+<strong>The app is still in the development stage and will be updated periodically as new features are added.</st>
+<p>For further information, please refer to the project's README file on GitHub.</p>
    
     <!--Footer-->
     <footer class="footer">
