correct linkedin link

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <a class="social-list__link" href="https://www.instagram.com/fumnanya_obi/"><i class="fa-brands fa-instagram"></i></a>
             </li>
             <li class="social-list__item"> 
-                <a class="social-list__link" href="https://www.linkedin.com/in/fumnanya-obi"><i class="fa-brands fa-linkedin"></i></a>
+                <a class="social-list__link" href="https://www.linkedin.com/in/fumnanyaobi/"><i class="fa-brands fa-linkedin"></i></a>
             </li>
             <li class="social-list__item">
                 <a class="social-list__link" href="https://github.com/fumnanya12"><i class="fa-brands fa-github"></i></a>
