--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -102,7 +102,7 @@
             </a>
         </li>
          <li class="social-list__item"> 
-            <a class=" social-list__link" href="www.linkedin.com/in/fumnanya-obi-7758441a9">
+            <a class=" social-list__link" href="https://www.linkedin.com/in/fumnanyaobi/">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
         </li>
