check resume and adjust css

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <img src="programmer-4523101_1280.jpg" alt="Picture of me" class="about-me__img">
         <div class="btn-con">
-            <a href="resumeofficial.docx" class="main-btn">
+            <a href="fumnanya_obi_resume.docx" class="main-btn">
                 <span class="btn-text">Download CV</span>
                 <span class="btn-icon"><i class="fa-solid fa-download"></i></span>
             </a>
@@ -90,7 +90,7 @@
                 <p>  I actively engage in discussions, share insights, and integrate feedback to enhance our collective knowledge. Tools like Git, Slack, and GitHub facilitate smooth collaboration .</p>
             </div><!--/service-->
         </div><!--/services-->
-        <a href="#work" class="btn">My Work</a>
+        
     </section>
 
     <!-- My Work -->
@@ -112,7 +112,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>I am currently seeking opportunities that will allow me to develop and hone my engineering skills . If you’re looking for someone who is passionate about technology and driven to learn, I would love to connect!</p>
+        <p>I am currently seeking opportunities that will allow me to develop my engineering skills . If you’re looking for someone who is passionate about technology and driven to learn, I would love to connect!</p>
         <a href="mailto:fumnanya.obi@gmail.com" class="footer-link">fumnanya.obi@gmail.com</a>
         <ul class="social-list">
             <li class="social-list__item"> 
