--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <img src="programmer-4523101_1280.jpg" alt="Picture of me" class="about-me__img">
         <div class="btn-con">
-            <a href="fumnanya_obi_resume.docx" class="main-btn">
+            <a href="fumnanya_obi_resume.pdf" class="main-btn">
                 <span class="btn-text">Download CV</span>
                 <span class="btn-icon"><i class="fa-solid fa-download"></i></span>
             </a>
