--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
             <a href="/portfolio-item.html" class="portfolio__item">
                 <img src="toptracks.png" alt="Portfolio Item 01" class="portfolio__img">
             </a>
-            <!-- Portfolio Item 01 -->
-            <a href="/portfolio-item.html" class="portfolio__item">
-                <img src="#" alt="Portfolio Item 01" class="portfolio__img">
+            <!-- Portfolio Item 02 -->
+            <a href="/React-projects.html" class="portfolio__item">
+                <img src="Project2image/Screenshot 2025-01-04 193021.png" alt="Portfolio Item 01" class="portfolio__img">
             </a>
           
         </div>
