Added new project to portfolio

--- a/React-projects.html
+++ b/React-projects.html
@@ -44,7 +44,7 @@
 
     </h1>
     <p class="section__subtitle section__subtitle--intro">React Projects Portfolio</p>
-    <a href="https://testspotify-af120bb16cf3.herokuapp.com/"><img src="Project2image/react-1-logo-svg-vector.svg" width="30px" alt="react logo" class="intro__img"></a>
+    <a href=""><img src="Project2image/react-1-logo-svg-vector.svg" width="30px" alt="react logo" class="intro__img"></a>
 </section>
 
 <div class="portfolio-item-individual">
