--- a/index.html
+++ b/index.html
@@ -104,7 +104,11 @@
             </a>
             <!-- Portfolio Item 02 -->
             <a href="/React-projects.html" class="portfolio__item">
-                <img src="Project2image/Screenshot 2025-01-04 193021.png" alt="Portfolio Item 01" class="portfolio__img">
+                <img src="Project2image/Screenshot 2025-01-04 193021.png" alt="Portfolio Item 03" class="portfolio__img">
+            </a>
+            <!-- Portfolio Item 03 -->
+            <a href="/Wordle.html" class="portfolio__item">
+                <img src="wordle/Wordlegame.png" alt="Portfolio Item 03" class="portfolio__img">
             </a>
           
         </div>
